--- a/SoccerPlayer.Api.csproj
+++ b/SoccerPlayer.Api.csproj
@@ -1,13 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
-
   <ItemGroup>
+    <PackageReference Include="graphiql" Version="1.2.0"/>
+    <PackageReference Include="GraphQL" Version="2.4.0"/>
     <PackageReference Include="HtmlAgilityPack.NetCore" Version="1.5.0.1"/>
     <PackageReference Include="HtmlAgilityPack.CssSelectors.NetCore" Version="1.2.1"/>
+    <PackageReference Include="GraphQL.Server.Transports.AspNetCore" Version="3.4.0"/>
+    <PackageReference Include="GraphQL.Server.Ui.Playground" Version="3.4.0"/>
   </ItemGroup>
-
-
 </Project>
